[tool.poetry]
name = "custom-threads"
version = "0.1.0"
description = "generate XML files of custom threads for Fusion360"
authors = ["BalzGuenat"]

[tool.poetry.dependencies]
python = ">=3.10"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
